examples/datalog/14_aggregations/39_group_having.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_having
Knowledge graph 'test_having' created.
Switched to knowledge graph: test_having
> .kg use test_having
Switched to knowledge graph: test_having
> +orders[(1, "Alice", 100), (2, "Bob", 50), (3, "Alice", 150), (4, "Bob", 30), (5, "Carol", 200)].
Inserted 5 fact(s) into 'orders'.
> +customer_total(Customer, <SUM:Amount>) :- orders(_, Customer, Amount).
Script error: Parse error: Invalid term: '<SUM:Amount>'
